--- a/Web-shoppe/asset/css/base.css
+++ b/Web-shoppe/asset/css/base.css
@@ -5,6 +5,7 @@
     --black-color: #000;
     --text-color: #333; 
     --primary-color :#ee4d2d;
+    --border-color:#dbdbdb;
 }
  
  * {
@@ -43,3 +44,66 @@
          opacity: 1;
      }
  }
+
+ /* modal */
+
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+}
+
+.modal__overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4)
+}
+
+.modal__body {
+    margin: auto;
+    position: relative;
+    z-index: 1;
+  
+}
+/* button style */
+
+.btn {
+    min-width: 142px;
+    height: 36px;
+    text-decoration: none;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    font-size: 1.5rem;
+    outline: none;
+    color: var(--text-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 8px;
+   
+}
+
+.btn:hover {
+   opacity: 0.9;
+}
+
+.btn.btn--primary {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    
+}
+
+.btn.btn--disable {
+    cursor: default;
+    background-color: #c3c3c3;
+    color: #949494;
+}
+.btn--size-s {
+    height: 32px;
+   font-size: 12px;
+}
