--- a/Web-shoppe/asset/css/base.css
+++ b/Web-shoppe/asset/css/base.css
@@ -6,6 +6,9 @@
     --text-color: #333; 
     --primary-color :#ee4d2d;
     --border-color:#dbdbdb;
+    /* --header-height:120px;
+    --navbar-height :34px;
+    --header-width-search-height:calc (var(--header-height) - var(--navbar-height)); */
 }
  
  * {
@@ -45,6 +48,14 @@
      }
  }
 
+ @keyframes growth {
+     from {
+         transform: scale(var(--growth-from));
+     }
+     to {
+         transform:  scale(var(--growth-to));
+     }
+ }
  /* modal */
 
 .modal {
@@ -54,6 +65,8 @@
     bottom: 0;
     left: 0;
     display: flex;
+    animation: fateIn linear 0.4s;
+   
 }
 
 .modal__overlay {
@@ -64,9 +77,12 @@
 }
 
 .modal__body {
+    --growth-from:0.7;
+    --growth-to:1;
     margin: auto;
     position: relative;
     z-index: 1;
+    animation:growth linear 0.1s;
   
 }
 /* button style */
@@ -85,6 +101,7 @@
     align-items: center;
     justify-content: center;
     padding: 0 8px;
+    line-height: 1.6rem;
    
 }
 
