--- a/Web-shoppe/asset/css/main.css
+++ b/Web-shoppe/asset/css/main.css
@@ -5,12 +5,13 @@
 .header__navbar {
     display: flex;
     justify-content: space-between;
+    height:34px;
 }
 
 .header__navbar-list {
     list-style: none;
     padding-left: 0;
-    margin-top: 5px;
+    margin : 4px 0 0 0;
 }
 
 .header__navbar-item {
@@ -33,6 +34,7 @@
     color: var(--white-color);
     text-decoration: none;
    font-weight: 300;
+   
    
 }
 
@@ -141,6 +143,7 @@
     animation: headerNotify ease-in 0.2s;
     display: none;
     will-change: opacity , transform;
+    z-index: 1;
 }
 .header__notify::before {
     content: "";
@@ -322,7 +325,7 @@
 }
 
 .auth-form__control {
-    margin-top: 80px;
+    margin-top: 70px;
     display: flex;
     justify-content: flex-end;
 }
@@ -354,4 +357,186 @@
 }
 .auth-form__socials-title {
     margin: 0 36px;
+}
+
+.auth-form__help {
+    display: flex;
+    justify-content: flex-end;
+    
+}
+.auth-form__link {
+    text-decoration: none;
+   font-size: 1.4rem;
+   color: #939393;
+}
+
+.auth-form__help-link {
+    display: block;
+    height: 16px;
+    margin:0 16px;
+    border-left: 1px solid var(--border-color);
+}
+
+.auth-form__help-forcus   {
+    color: var(--primary-color);
+}
+
+/* search */
+
+.header__logo-name {
+    color: var(--white-color);
+    font-size: 32px;
+    width: 150px;
+}
+
+.header-width-search {
+   height: 74px;
+   display: flex;
+   align-items: center;
+}
+
+.header__search {
+    height: 40px;
+    background-color: var(--white-color);
+    flex: 1;
+    border-radius: 2px;
+    margin: 0 10px 0 30px;
+    display: flex;
+    align-items: center;
+  
+}
+
+.header__cart {
+    width: 150px;
+    text-align: center;
+   
+}
+
+.header__cart-icon {
+    color: var(--white-color);
+    font-size: 2.4rem;
+
+}
+.header__search-input-wrap {
+
+}
+
+.header__search-input {
+    width: 100%;
+    height: 100%;
+    border:none;
+    outline: none;
+    font-size: 1.5rem;
+    color:#000;
+    padding: 0 16px;
+   border-radius: 3px;
+   flex: 1;
+  
+}
+
+.header__search-select {
+    border-left: 1px solid #e8e8e8;
+    padding-left: 16px;
+   cursor: default;
+   position: relative;
+
+}
+.header__search-select-label {
+    font-size: 1.4rem;
+    color: var(--text-color);
+    cursor: pointer;
+    
+}
+
+.header__search-select-icon {
+    font-size: 1.4rem;
+    color: var(--text-color);
+    color: #4a4a4a;
+    margin: 0 16px 0 8px;
+    position: relative;
+    top:1px;
+}   
+
+.header__search-btn {
+    background-color: var(--primary-color);
+    border: none;
+    height: 36px;
+    border-radius: 2px;
+    margin-right: 3px;
+    width: 60px;
+    outline: none;
+    cursor: pointer;
+}
+.header__search-btn:hover {
+    background-color: #df674f;
+}
+
+.header__search-btn-icon {
+    font-size: 1.4rem;
+    color: var(--white-color);
+}
+
+.header__search-select:hover .header__search-option {
+    display: block;
+}
+
+
+.header__search-option {
+    position: absolute;
+    right: 0;
+    top: 120%;
+    width: 130px;
+    box-shadow: 0 1 2px #ccc;
+    padding-left: 0;
+    border-radius: 1px;
+    display: none;
+    animation:fateIn ease-in 0.3s;
+  
+   
+}
+
+.header__search-option::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 20px;
+   
+    position: absolute;
+    top: -17px;
+    left: 0;
+    
+}
+.header__search-option-item {
+    background-color: var(--white-color);
+    border-radius: 1px;
+    padding: 8px 8px;
+    list-style: none;
+  
+}
+.header__search-option-item:hover {
+    background-color: #fafafa;
+    cursor: pointer;
+}
+
+.header__search-option-item span {
+    font-size: 1.4rem;
+    color: var(--text-color);
+    margin-left: 8px;
+}
+
+.header__search-option-item i {
+    font-size: 1.4rem;
+    color: var(--primary-color);
+    margin-left: 12px;
+    display: none;
+}
+
+.header__search-option-item-active i  {
+    display: inline-block;
+}
+
+.header__search-history {
+    position: absolute;
+    top: 100%;
+    left: 0;
 }
