--- a/Web-shoppe/asset/css/main.css
+++ b/Web-shoppe/asset/css/main.css
@@ -12,13 +12,16 @@
     list-style: none;
     padding-left: 0;
     margin : 4px 0 0 0;
+    display: flex;
 }
 
 .header__navbar-item {
     margin:0 8px;
    position: relative;
+   min-height: 26px;
  
 }
+
 
 .header__navbar-item--has-qr:hover .header__qr {
     display:block;
@@ -57,7 +60,7 @@
     position: absolute;
     border-right: 1px solid #fb9086;
     height: 15px;
-     top: 50%;
+     top: 30%;
     right: -9px;
     transform: translateY(-50%);
 }
@@ -410,11 +413,186 @@
     width: 150px;
     text-align: center;
    
+   
+}
+
+.header__cart-wrap {
+    position: relative;
+    display: inline-block;
+    padding:0 8px;
+    cursor: pointer;
+    z-index: 1;
 }
 
 .header__cart-icon {
     color: var(--white-color);
     font-size: 2.4rem;
+  
+    
+}
+
+.header__cart-wrap:hover  .header__cart-list{
+    display: block;
+}
+
+.header__cart-list {
+    position: absolute;
+    right: -5px;
+    top: calc(100% + 10px);
+    background-color: var(--white-color);
+    width: 400px;
+    border-radius: 2px;
+    box-shadow: 0 1px 3.125rem rgba(0,0,0,0.2);
+    display: none;
+    animation: fateIn ease-in 0.2s;
+    cursor: default;
+    
+   
+    
+}
+
+/* cart item */
+.header__cart-heading {
+    text-align: left;
+    margin: 8px 0 8px 12px;
+    font-size: 1.4rem;
+   color: #999;
+    font-weight: 500;
+}
+
+.header__cart-list-item {
+    padding-left: 0;
+    list-style: none;
+}
+
+.header__cart-item:hover {
+    background-color: #f8f8f8;
+}
+.header__cart-item{
+    display: flex;
+   align-items: center;
+   margin-top: 10px;
+}
+
+.header__cart-item-info{
+    width: 100%;
+   
+}
+
+.header__cart-img {
+    width: 50px;
+    height: 50px;
+    margin: 0 6px 0 12px;
+    border :1px solid #E8E8E8;
+}
+
+.header__cart-item-head{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 12px;
+}
+
+.header__cart-item-name{
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: var(--text-color);
+    margin: 0;
+}
+
+.header__cart-item-price{
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: var(--primary-color);
+}
+
+.header__cart-item-multifly{
+    font-size: 0.9rem;
+    margin: 0 4px;
+    color: #757575;
+}
+
+.header__cart-item-qnt{
+    color: #757575;
+    font-size: 1.2rem;
+  
+}
+
+.header__cart-item-body{
+    display: flex;
+    justify-content: space-between;
+    margin-right: 12px;
+    margin-top: 6px;
+}
+
+.header__cart-item-description{
+    color: #757575;
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+
+.header__cart-item-remove{
+    color: var(--text-color);
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.header__cart-item-remove:hover {
+    color: var(--primary-color);
+    cursor: pointer;
+}
+
+.header__cart-view  {
+  float: right;
+  margin: 0 12px 12px 0;
+}
+/* cart item end */
+
+.header__cart-list::after {
+         content: "";
+       position: absolute;
+       right: 4px;
+       top: -30px;
+       border-width: 20px;
+       border-style: solid;
+       border-color: transparent transparent var(--white-color) transparent;
+       cursor: pointer;
+}
+.header__cart-list--no-cart {
+    padding:32px 0;
+}
+
+.header__cart-list--no-cart .header__cart-no-cart-img ,
+.header__cart-list--no-cart .header__cart-list--no-cart-msg  {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.header__cart-no-cart-img {
+    width: 50%;
+    display: none;
+}
+
+.header__cart-list--no-cart-msg {
+    display: none;
+    font-size: 1.4rem;
+    margin-top: 14px;
+    color: var(--text-color);
+    
+}
+
+.header__cart-notice {
+    position: absolute;
+    padding: 1px 7px;
+    top: -8px;
+    right: -11px;
+    background-color: var(--white-color);
+    color: var(--primary-color);
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    border-radius: 10px;
+    border: 2px solid #ee4d2d
 
 }
 .header__search-input-wrap {
@@ -429,8 +607,8 @@
     font-size: 1.5rem;
     color:#000;
     padding: 0 16px;
-   border-radius: 3px;
-   flex: 1;
+    border-radius: 3px;
+    flex: 1;
   
 }
 
