--- a/Web-shoppe/asset/css/base.css
+++ b/Web-shoppe/asset/css/base.css
@@ -21,7 +21,7 @@
     font-family: 'Roboto', sans-serif;;
     box-sizing: border-box;
  }
-
+/* reponsive */
  .grid {
      width: 1200px;
      max-width: 100%;
@@ -32,11 +32,24 @@
      width: 100%;
  }
 
- .grid__grow {
+ .grid__row {
      display: flex;
      flex-wrap: wrap;
+     margin-left: -12px;
+     margin-right: -12px;
  }
+.grid__column-2 {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 16.6667%;
+}
 
+.grid__column-10 {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 83.3334%;
+}
+ 
  /* animation */
 
  @keyframes fateIn {
