--- a/Web-shoppe/asset/css/base.css
+++ b/Web-shoppe/asset/css/base.css
@@ -35,18 +35,24 @@
  .grid__row {
      display: flex;
      flex-wrap: wrap;
-     margin-left: -12px;
-     margin-right: -12px;
+     margin-left: -5px;
+     margin-right: -5px;
  }
 .grid__column-2 {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 16.6667%;
+}
+
+.grid__column-2-4 {
+   
+    padding-right: 5px;
     width: 16.6667%;
 }
 
 .grid__column-10 {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: 83.3334%;
 }
  
@@ -110,7 +116,7 @@
     font-size: 1.5rem;
     outline: none;
     color: var(--text-color);
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     padding: 0 8px;
@@ -137,3 +143,57 @@
     height: 32px;
    font-size: 12px;
 }
+
+/* selection  */
+.select-input {
+    position: relative;
+    min-width: 200px;
+    height: 34px;
+    padding:0 12px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.select-input:hover .select-input__list {
+    display: block;
+}
+.select-input__label {
+    font-size: 1.5rem;
+}
+
+.select-input__icon {
+    font-size: 1.4rem;
+    color: rgb(131,131,131);
+    position: relative;
+    top: 1px;
+}
+
+.select-input__list {
+    position: absolute;
+    top: 25px;
+    left: 0;
+    right: 0;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    padding: 10px 16px;
+    list-style: none;
+    display: none;
+}
+
+.select-input__link  {
+    font-size: 1.5rem;
+    text-decoration: none;
+    color: var(--text-color);
+    display: block;
+    padding: 4px 0;
+
+}
+
+.select-input__link:hover {
+    color: var(--primary-color);
+}
+
