--- a/Web-shoppe/asset/css/main.css
+++ b/Web-shoppe/asset/css/main.css
@@ -845,3 +845,244 @@
 
 /* container */
 
+.app__container {
+    background-color: #f5f5f5;
+
+}
+
+.app-content {
+    padding-top: 36px;;
+}
+.category {
+    background-color: var(--white-color);
+    border-radius: 2px;
+}
+
+.category__heading {
+    font-size: 1.7rem;
+    color: var(--text-color);
+    padding: 12px 16px;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    margin-top: 0;
+}
+
+.category__heading-icon {
+    font-size: 1.4rem;
+    margin-right: 4px;
+    position: relative;
+    top: -1px;
+}
+
+.category-list {
+    padding-left: 0;
+    list-style: none;
+    margin-left: 10px;
+}
+
+.category-item {
+
+} 
+
+.category-item--active .category-item__link {
+    color: var(--primary-color);
+}
+.category-item--active .category-item__link::before {
+    content: "";
+    position: absolute;
+    border: 4px solid;
+    border-color: transparent transparent transparent var(--primary-color);
+    top: 50%;
+    transform: translateY(-50%);
+    left: 6px;
+}
+
+.category-item__link {
+    font-weight: 600;
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.5rem;
+    padding: 8px 16px;
+    display: block;
+    position: relative;
+    right: 0;
+    transition:right linear 0.1s ;
+}
+
+.category-item__link:hover {
+    right: -4px;
+    color: var(--primary-color);
+}
+
+/* home filter + */
+
+.home-filter {
+    background-color: rgba(0,0,0,0.05);
+    align-items: center;
+    display: flex;
+    padding: 12px 22px;
+    border-radius: 2px;
+  
+}
+
+.home-filter__label {
+    font-size: 1.4rem;
+    color: #55555;
+    margin-right: 16px;
+}
+.home-filter__btn  {
+    margin-right: 12px;
+    min-width: 90px;
+    background-color: var(--white-color);
+}
+.home-filter__page {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.home-filter__page-num {
+    font-size: 1.5rem;
+    color: var(--text-color);
+    margin-right: 22px;
+}
+
+.home-filter__page-current {
+    color: var(--primary-color);
+}
+
+.home-filter__page-control {
+   border-radius: 2px;
+   overflow: hidden;
+   display: flex;
+   width: 72px;
+   height: 36px;
+  
+   
+}
+.home-filter__page-btn {
+  flex: 1;
+  background-color: var(--white-color);
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.home-filter__page-btn:first-child {
+    border-right: 1px solid #eee;
+    cursor: default;
+}
+
+.home-filter__page-btn-disable .home-filter__page-icon {
+    color: #ccc;
+}
+.home-filter__page-icon  {
+    font-size: 1.4rem;
+    color: #555;
+}
+
+/* PRODUCT */
+
+.home-product-item{
+    background-color: var(--white-color);
+    margin-top: 10px;
+   min-width: 187px;
+}
+
+.home-product-item__img{
+    padding-top: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.home-product-item__name{
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--text-color);
+    line-height: 1.8rem;
+    overflow: hidden;
+    height: 3.6rem;
+    margin: 10px 10px 4px;
+    /* ... */
+    display: block;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp:2 ;
+    text-overflow: ellipsis;
+}
+
+.home-product-item__price{
+    display: flex;
+    margin-left: 10px;
+    align-items:baseline;
+    flex-wrap: wrap;
+}
+
+.home-product-item__price-old{
+    font-size: 1.4rem;
+    color: #666;
+    text-decoration: line-through;
+}
+
+.home-product-item__price-new{
+    font-size: 1.6rem;
+    color: var(--primary-color);
+    margin-left: 4px;
+}
+
+.home-product-item__action{
+    display: flex;
+    justify-content: space-between;
+    margin: 6px 10px 0;
+}
+
+.home-product-item__like{
+    font-size: 1.4rem;
+}
+
+i.home-product-item__like-fill {
+    display: none;
+    color: #f63d00;
+}
+
+.home-product-item__like--liked .home-product-item__like-fill {
+    display: inline-block;
+}
+
+.home-product-item__like--liked .home-product-item__like-empty {
+    display: none;
+}
+
+.home-product-item__rating{
+  font-size: rem;
+}
+
+.home-product-item__origin{
+
+}
+
+.home-product-item__brand{
+
+}
+
+.home-product-item__origin-name{
+
+}
+
+.home-product-item__favourite{
+
+}
+
+.home-product-item__sale-off{
+
+}
+
+.home-product-item__sale-off-pecent{
+
+}
+
+.home-product-item__sale-off-label{
+
+}
+
