--- a/Web-shoppe/asset/css/main.css
+++ b/Web-shoppe/asset/css/main.css
@@ -107,7 +107,7 @@
 .header__navbar-item,
 .header__navbar-item--link {
     display: flex;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     color: var(--white-color);
     text-decoration: none;
    font-weight: 300;
@@ -507,6 +507,7 @@
     box-shadow: 0 0px 2px #666;
     display: none;
     overflow: hidden;
+    z-index: 1;
 }
 
 .header__search-history-heading {
@@ -593,10 +594,13 @@
 .header__cart-list-item {
     padding-left: 0;
     list-style: none;
+    height: 50vh;
+    overflow-y: auto;
 }
 
 .header__cart-item:hover {
     background-color: #f8f8f8;
+    cursor: pointer;
 }
 .header__cart-item{
     display: flex;
@@ -628,6 +632,16 @@
     font-weight: 500;
     color: var(--text-color);
     margin: 0;
+    line-height: 2rem;
+    max-height: 4rem;
+    overflow: hidden;
+    text-align: left;
+    flex: 1;
+    padding-right: 16px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    
 }
 
 .header__cart-item-price{
@@ -799,6 +813,7 @@
     border-radius: 1px;
     display: none;
     animation:fateIn ease-in 0.3s;
+    
   
    
 }
@@ -859,57 +874,55 @@
 }
 
 .category__heading {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
+  
     color: var(--text-color);
-    padding: 12px 16px;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+    padding: 16px 16px 0;
     margin-top: 0;
+    text-transform: uppercase;
 }
 
-.category__heading-icon {
-    font-size: 1.4rem;
-    margin-right: 4px;
-    position: relative;
-    top: -1px;
-}
+
 
 .category-list {
     padding-left: 0;
     list-style: none;
-    margin-left: 10px;
+   
 }
 
 .category-item {
-
+    position: relative;
 } 
+.category-item:first-child::before {
+    display: none;
+}
+.category-item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 20px;
+    left: 20px;
+    border-top: 1px solid #f1f1f1;
+}
 
 .category-item--active .category-item__link {
     color: var(--primary-color);
 }
-.category-item--active .category-item__link::before {
-    content: "";
-    position: absolute;
-    border: 4px solid;
-    border-color: transparent transparent transparent var(--primary-color);
-    top: 50%;
-    transform: translateY(-50%);
-    left: 6px;
-}
+
 
 .category-item__link {
     font-weight: 600;
     text-decoration: none;
     color: var(--text-color);
-    font-size: 1.5rem;
-    padding: 8px 16px;
+    font-size: 1.4rem;
+    padding: 6px 20px;
     display: block;
     position: relative;
-    right: 0;
-    transition:right linear 0.1s ;
+   
 }
 
 .category-item__link:hover {
-    right: -4px;
+   
     color: var(--primary-color);
 }
 
@@ -982,18 +995,34 @@
 }
 
 /* PRODUCT */
-
+.home-product {
+    margin-bottom: 20px;
+}
 .home-product-item{
     background-color: var(--white-color);
     margin-top: 10px;
    min-width: 187px;
+   position: relative;
+   border-radius: 2px;
+  
+   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+   transition: transform  linear 0.1s;
+   will-change: transform;
+   text-decoration: none;
+}
+
+.home-product-item:hover{
+    transform: translateY(-2px);
+    box-shadow: 0 1px 20px 0 rgba(0 ,0, 0, 0.05);
 }
 
 .home-product-item__img{
     padding-top: 100%;
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: center;
+    background-position:top center;
+    border-top-right-radius: 2px;
+    border-top-left-radius: 2px;
 }
 
 .home-product-item__name{
@@ -1034,11 +1063,11 @@
 .home-product-item__action{
     display: flex;
     justify-content: space-between;
-    margin: 6px 10px 0;
+   margin: 9px 10px 0;
 }
 
 .home-product-item__like{
-    font-size: 1.4rem;
+    font-size: 1.3rem;
 }
 
 i.home-product-item__like-fill {
@@ -1054,16 +1083,34 @@ i.home-product-item__like-fill {
     display: none;
 }
 
+.home-product-item--gold {
+    color: var(--star-gold-color);
+}
+
+.home-product-item__sold {
+    font-size: 1.3rem;
+    color: var(--text-color);
+    margin-left: 6px;
+    font-weight: 600;
+}
 .home-product-item__rating{
-  font-size: rem;
+    transform-origin: right;
+    margin-left: auto;
+    margin-top: -1px;
 }
 
 .home-product-item__origin{
+    display: flex;
+    justify-content: space-between;
+    margin: 4px 10px 0;
+    color: #595959;
+    font-size: 1.2rem;
+    font-weight: 300;
 
 }
 
 .home-product-item__brand{
-
+ 
 }
 
 .home-product-item__origin-name{
@@ -1071,18 +1118,70 @@ i.home-product-item__like-fill {
 }
 
 .home-product-item__favourite{
-
+    position: absolute;
+    top: 10px;
+    left: -4px;
+    color: var(--primary-color);
+    background-color: currentColor;
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 1.6rem;
+    padding-right: 4px;
+    border-top-right-radius:3px ;
+    border-bottom-right-radius:3px ;
 }
 
+.home-product-item__favourite span {
+   color: var(--white-color);
+}
+.home-product-item__favourite::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    border-top: 3px solid currentColor;
+    border-left: 3px solid transparent;
+    filter: brightness(60%);
+}
+.home-product-item__favourite i {
+    font-size: 0.9rem;
+    margin: 0 2px 0 4px;
+    color: var(--white-color);
+}
 .home-product-item__sale-off{
-
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40px;
+    height: 36px;
+    background-color: rgba(255,216,64,0.94);
+    text-align: center;
+    border-top-right-radius: 2px;
 }
 
-.home-product-item__sale-off-pecent{
-
+.home-product-item__sale-off::after{
+    content: "";
+    position: absolute;
+    left: 0;
+   bottom: -4px;
+   border-width: 0 20px 4px;
+   border-style: solid;
+   color: rgba(255,216,64,0.94);
+   border-color: transparent  currentColor transparent  currentColor;
+}
+.home-product-item__sale-off-percent{
+    color: #ee4d2d;
+    font-weight: 900;
+    font-size: 1.2rem;
+    line-height: 1.3;
+    margin-top: 3px;
+    display: block;
 }
 
 .home-product-item__sale-off-label{
-
+    color: var(--white-color);
+    font-size: 1.2rem;
+    line-height: 1.3;
+    font-weight: 600;
 }
 
