--- a/Web-shoppe/asset/css/base.css
+++ b/Web-shoppe/asset/css/base.css
@@ -54,6 +54,14 @@
     width: 16.6667%;
 }
 
+.grid__column-footer {
+   
+    margin-left: 40px;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 16.6667%;
+}
+
 .grid__column-10 {
    
     padding-left: 5px;
@@ -203,3 +211,43 @@
     color: var(--primary-color);
 }
 
+.pagination{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+}
+
+
+.pagination-item{
+    margin: 0 14px;
+}
+
+.pagination-item__link{
+    --height :30px;
+    text-decoration: none;
+    font-size: 2rem;
+    color: #939393;
+    min-width: 40px;
+    display: block;
+    text-align: center;
+    height: var(--height);
+    line-height: var(--height);
+    border-radius: 2px;
+    font-weight: 300;
+}
+
+.pagination-item__icon{
+    
+}
+
+ .pagination-item--active {
+   
+     background-color: var(--primary-color);
+     color: var(--white-color);
+}
+
+.pagination-item--active:hover {
+    opacity: 0.9;
+    
+}
