--- a/Web-shoppe/asset/css/main.css
+++ b/Web-shoppe/asset/css/main.css
@@ -1185,3 +1185,82 @@ i.home-product-item__like-fill {
     font-weight: 600;
 }
 
+/* pagination */
+
+.home-product__pagination {
+    margin: 48px 0 32px 0;
+}
+
+/* footer */
+
+.footer {
+    padding-top: 12px;
+  border-top: 4px solid var(--primary-color);
+  
+}
+
+.footer__heading {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    color: var(--text-color);
+}
+.footer-list {
+    padding: 0;
+    list-style: none;
+
+}
+
+.footer-item__link {
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: #737373;
+    padding: 5px 0; 
+    display: flex;
+    align-items: center;
+}
+
+.footer-item__link:hover {
+    color: var(--primary-color);
+}
+
+.footer-item-icon {
+    font-size: 1.7rem;
+    margin: -1px 8px 0 0;
+
+}
+
+.footer__download {
+    display: flex;
+}
+
+.footer__download-qr {
+    width: 80px;
+    height: 80px;
+   /* object-fit: contain; */
+   border: 1px solid var(--border-color);
+}
+.footer__download-app {
+    flex: 1;
+    margin-left: 16px;
+    
+}
+
+.footer__download-app-link {
+    text-decoration: none;
+}
+
+.footer__download-app-img {
+    height: 20px;
+}
+
+.footer__bottom {
+    background-color: #f5f5f5;
+   padding: 24px 0; 
+   margin-top: 36px;
+}
+.footer__text {
+    margin: 0;
+    font-size: 1.4rem;
+    text-align: center;
+    color: #737373;
+}
